# Pasargadae

./: .gitignore  LICENSE  downloads.db  pyproject.toml
.history/: Makefile_20241025195405  ac_20241025165653.py  ac_20241025170216.py  ac_20241025174758.py  build_20241025193851.sh  display_20241025195359.h  display_20241025195401.c  main_20241025154856.py  main_20241025162253.py  main_20241025162357.py  main_20241025162400.py  main_20241025162528.py  main_20241025162851.py  main_20241025164529.py  main_20241025164806.py  main_20241025164942.py  main_20241025165140.py  main_20241025174218.py  main_20241025195403.c  pipewire_capture_20241025195020.h  pipewire_capture_20241025195033.c  pipewire_capture_20241025195356.c  portal_20241025194945.h  portal_20241025194946.c  portal_20241025195016.c  portal_20241025195453.c  portal_20241025195619.c  pyproject_20241025155600.toml  pyproject_20241025155654.toml  pyproject_20241025155716.toml  pyproject_20241025161215.toml  pyproject_20241025161226.toml  pyproject_20241025161239.toml  pyproject_20241025161522.toml  pyproject_20241026164354.toml  pyproject_20241026171138.toml  screen_capture_20241025182532.cpp  screen_capture_20241025182548.cpp  screen_capture_20241025182625.cpp  screen_capture_20241025182628.c  (+15 more)
.history/src/: main_20241026164350.py  main_20241026164859.py  main_20241026165154.py  main_20241026202553.py  main_20241026202626.py
src/: main.py
src/components/: main_window.py  navigation_tree.py
src/core/: browser_integration.py  download_manager.py  download_worker.py  queue_manager.py  scheduler.py  (+1 more)
(+302 files in other folders)
