[tool.poetry]
name = "pasargadae"
version = "0.1.0"
description = "A modern download manager"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.5.2"
pySmartDL = "^1.3.4"
qframelesswindow = "^0.4.0"
aiohttp = "^3.8.5"
pydantic = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-qt = "^4.2.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
